--- a/assets/main.css
+++ b/assets/main.css
@@ -17,6 +17,10 @@ body {
   background-color: var(--color-background);
   color: var(--color-secondary);
   font-family: 'Montserrat', Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
